Restructrization for Colpitts part

--- a/p0/p0.tex
+++ b/p0/p0.tex
@@ -1,7 +1,7 @@
 \phantomsection
 \chapter*{Введение}
 
-\paragraph{Актуальность темы}.
+\paragraph{Актуальность темы}
 \pdfbookmark[1]{Актуальность темы}{actualitybookmark}
 
 Нелінійні динамічні системи, широко представлені в сучасних технологічних і
