--- a/p6/colp_real.tex
+++ b/p6/colp_real.tex
@@ -5,7 +5,7 @@
   colp: ASAU-21, APIR-2013
 }
 
-\section{Определение системы и анализ её динамики} %  % {{{1
+\section{Определение системы} %  % {{{1
 \label{atu:s:colp_task}
 
 В ряде радиоэлектронных устройств используются
@@ -136,6 +136,10 @@ $ T_s = \sqrt{L C} $.
   \od{x}{t_s} \equiv \dot{x} = T_s \od{x}{t} .
 \]
 
+% }}}1
+
+\section{Классическая модель генератора Колпитца}  % {{{1
+
 Поведение величины $I_{ce}$ (в дальнейшем просто $I_c$) достаточно хорошо описывает модель
 Эберса-Молла~\cite{horowitz}:
 %
@@ -242,10 +246,9 @@ $b \in [ 0.02; 4.2 ]$
 с другой -- срывом генерации.
 
 
-% }}}2
+% }}}1
 
-
-\subsection{Влияние параметров системы идентификации на ошибку идентификации для упрощенной модели системы Колпитца}  % {{{2
+\section{Моделирование динамики классической модели системы Колпитца и сравнение с реальным генератором}  % {{{1
 
 
 На рис.~\ref{atu:f:colp_real_xzz}--\ref{atu:f:colp_model_f} представлены как результаты реального эксперимента,
@@ -320,6 +323,10 @@ $b \in [ 0.02; 4.2 ]$
 С другой стороны, ограниченный набор данных, получаемых с осциллографа Rigol DS1052E (8192 отсчёта) не позволяют
 получить достаточно подробный спектр реальной системы.
 
+% }}}1
+
+\section{Критерии идентификации для классической модели системы Колпитца}  % {{{1
+
 Для определения критерия идентификации рассмотрим зависимости
 $q(\mu) $, полученные путём моделирования
 для системы Колпитца (рис.~\ref{atu:f:colp_q}).
@@ -343,6 +350,10 @@ $q(\mu) $, полученные путём моделирования
 Из графиков очевидно, что
 обратные зависимости не дают заметного выигрыша, поэтому выберем
 величину $ q_{x^2}(b) $ в качестве критерия.
+
+% }}}1
+
+\section{Моделирование процессов идентификации для классической модели генератора Колпитца} % {{{1
 
 % TODO: new name
 В качестве системы идентификации использовалась система с пятью поисковыми агентами и
@@ -372,6 +383,10 @@ $q(\mu) $, полученные путём моделирования
 }
 \label{atu:f:colp_id}
 \end{figure}
+
+% }}}1
+
+\section{Влияние параметров системы идентификации на ошибку идентификации для классической модели системы Колпитца}  % {{{1
 
 Зависимость среднеквадратических ошибок идентификации от величины $q_\gamma$ (рис.~\ref{atu:f:colp_e_qgamma})
 даёт информацию о корректной настройке этого параметра системы идентификации.
@@ -405,12 +420,9 @@ $q(\mu) $, полученные путём моделирования
 \label{atu:f:colp_e_a_q}
 \end{figure}
 
-% }}}2
-
-
-
-
 % }}}1
+
+
 
 \section{Уточнённая модель генератора Колпитца}  % {{{1
 
@@ -594,7 +606,6 @@ $\SI{15}{\volt}$, в то время как входное напряжение 
 
 % }}}1
 
-
 \section{Анализ и выбор критериев}  % {{{1
 
 Проверяем старые.
@@ -750,6 +761,9 @@ $\SI{15}{\volt}$, в то время как входное напряжение 
   \label{atu:f:colp_r_id_4}
 \end{figure}
 
+% }}}1
+
+\section{Влияние параметров системы идентификации на ошибку идентификации для реального генератора Колпитца}  % {{{1
 
 
 Рассмотрим зависимости ошибок идентификации от параметров самой системы идентификации.
