Nex Colpitts reorganization

--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -3020,7 +3020,7 @@ $p_{leW}$.
 
 Примеры обозначений:
 % ``Fglv5.3z.$q_{x^2}$''
-``Fc3zlovngcW.$q_{x^2}$:5''
+``Fq3zlovngcW.$q_{x^2}$:5''
 --- метод, агенты которого
 для оценивания величины $p_e$ используют функцию качества и квадратичную аппроксимацию
 по данным каждых трёх соседних агентов, 2 псевдомодели на границе,
