Add real Colpitts dynamics pictures.

--- a/p6/colp_real.tex
+++ b/p6/colp_real.tex
@@ -400,6 +400,7 @@ $b \in [ 0.02; 4.2 ]$
 требует дальнейшего исследования.
 С другой стороны, ограниченный набор данных, получаемых с осциллографа  (8192 отсчёта) не позволяют
 получить достаточно подробный спектр реальной системы.
+Разрешение в спектральной области составляет $ \approx \SI{190}{\hertz}$.
 
 % }}}1
 
@@ -641,11 +642,91 @@ $\SI{15}{\volt}$, в то время как входное напряжение 
 Перед каждой серией экспериментов проводилась калибровка
 измерительного комплекса на набор заданных значений напряжений.
 После измерений проводилась проверка на стабильность
-параметров, и в случая отрицательного результата
+параметров, и в случае отрицательного результата
 данные отбрасывались.
 
+В первой серии экспериментов значение параметра
+$R_c$ было для каждого эксперимента фиксированным,
+и настраивалось перед каждым экспериментом.
+Использовался неравномерный ряд значений параметра в диапазоне $[ 25.3 ; 100]\SI{}{ohm} $.
+В тех областях, где наблюдалось сложное поведение, расстояние между точками было меньшим.
 
-Примеры динамики с сравнением.
+Система регистрации данных работала с использованием четырёх
+каналов измерения. Измерялись сигналы:
+$V_e(t) = V_1(t)$,
+$V_c(t) = V_1(t) + V_2(t)$,
+$V_{ca}(t)$ --- потенциал на контакте 1 разъёма $\mathrm{P}_3$,
+$V_cc(t)$.
+Сигнал $V_2(t)$ определялся как $V_c(t) - V_e(t)$.
+Ток через катушку индуктивности оценивался как
+$I_L = \frac{V_{cc}(t) - V_{ca}(t)}{R_{cv1}+R_{cv2}}$.
+Сигнал $V_{cc}(t)$ использовался для контроля калибровки
+системы регистрации, а также для проверки отсутствия пульсаций напряжения питания.
+
+
+
+При относительно высоких значения параметра $R_c$
+наблюдается регулярная динамика и линейчатый спектр~(рис.~\ref{atu:f:colp_r_attr_f_50}).
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.48\textwidth]{p/r/v1iv2_050000.png}
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/r/f_050000.png}
+  }
+  \caption{Аттрактор и спектр реального генератора Колпитца при $R_c = \SI{50}{\ohm} $}
+  \label{atu:f:colp_r_attr_f_50}
+\end{figure}
+
+При уменьшении значения $R_c$
+происходит удвоение периода,
+что отображается в виде второй петли аттрактора
+и появлением приблизительно вдвое меньших частот в спектре~(рис.~\ref{atu:f:colp_r_attr_f_40}).
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.48\textwidth]{p/r/v1iv2_040000.png}
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/r/f_040000.png}
+  }
+  \caption{Аттрактор и спектр реального генератора Колпитца при $R_c = \SI{40}{\ohm} $}
+  \label{atu:f:colp_r_attr_f_40}
+\end{figure}
+
+Дальнейшее уменьшение значения параметра,
+через каскад бифуркаций, приводит
+к появлению странного аттрактора и сплошного спектра
+(рис.~\ref{atu:f:colp_r_attr_f_30}).
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.48\textwidth]{p/r/v1iv2_030000.png}
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/r/f_030000.png}
+  }
+  \caption{Аттрактор и спектр реального генератора Колпитца при $R_c = \SI{30}{\ohm} $}
+  \label{atu:f:colp_r_attr_f_30}
+\end{figure}
+
+При этом, в отличие от системы Лоренца,
+при дальнейшем изменении параметра происходит чередование
+хаотического и сложно-периодического режимов
+(рис.~\ref{atu:f:colp_r_attr_f_29}).
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.48\textwidth]{p/r/v1iv2_029000.png}
+    \hfill
+    \includegraphics[width=0.48\textwidth]{p/r/f_029000.png}
+  }
+  \caption{Аттрактор и спектр реального генератора Колпитца при $R_c = \SI{29}{\ohm} $}
+  \label{atu:f:colp_r_attr_f_29}
+\end{figure}
+
+В отличие от системы сбора данных, основанных на цифровом осциллографе,
+разрешение в спектральной области составило $\SI{1}{\hertz}$,
+что позволило уверенно отличать спектры хаотической
+и сложно-периодической динамики.
 
 % }}}1
 
