--- a/p7/relax_real.tex
+++ b/p7/relax_real.tex
@@ -1658,7 +1658,7 @@ $p_{ee}$.
 (рис.~\ref{atu:f:relax3ds_read_id2_prm_0-p_k_c}).
 При малых значениях этого параметра движение агента в пределах
 своей ``полосы'' ограничивается только взаимодействием с соседями,
-что приводит коллективным сещениям агентов.
+что приводит коллективным смещениям агентов.
 Высокие значания этого параметра существенно ограничивают
 возможность смещения агентов, что естественно приводит
 к увеличению ошибки идентификации. Таким образом,
