Words for Colpitts criterion.

--- a/p6/colp_real.tex
+++ b/p6/colp_real.tex
@@ -732,15 +732,30 @@ $I_L = \frac{V_{cc}(t) - V_{ca}(t)}{R_{cv1}+R_{cv2}}$.
 
 \section{Анализ и выбор критериев}  % {{{1
 
-Проверяем старые.
-
-Исследуем всякие.
+При идентификации классической модели генератора Колпитца
+был использован критерий $q_{x^2}$.
+Замена модели на новую требует провести анализ критериев
+повторно. На рис.~\ref{atu:f:colp_bjt_q-p_Rc_q}
+представлены зависимости исследуемых критериев от значения $R_c$,
+для новой модели.
 
 \begin{figure}[htb!]
 \centerline{\includegraphics[width=0.7\textwidth]{p/colp_bjt_q-p_Rc_q.png} }
 \caption{Зависимости значений критериев идентификации для модели системы Колпитца}
 \label{atu:f:colp_bjt_q-p_Rc_q}
 \end{figure}
+
+Существенное нарушение монотонности как для ранее используемого
+критерия $q_{x^2}$, так и для другого кандидата --- $q_{z^2}$,
+особенно в областях, где наблюдается хаотическая динамика,
+не способствует успешному процессу идентификации.
+С другой стороны, критерий $q_{xz}$ проявляет
+монотонную зависимость, по крайней мере для модели.
+
+Рассмотрим зависимости этих же критериев, но для
+реального генератора, полученные на основании данных
+с предыдущей серии экспериментов с фиксированным значением
+параметра. Полученные зависимости представлены на рис.~\ref{atu:f:colp_read_q-p_Rc_q-p_Rc_q}.
 
 
 \begin{figure}[htb!]
@@ -749,13 +764,39 @@ $I_L = \frac{V_{cc}(t) - V_{ca}(t)}{R_{cv1}+R_{cv2}}$.
 \label{atu:f:colp_read_q-p_Rc_q-p_Rc_q}
 \end{figure}
 
+Для реального генератора наблюдается картина, практически совпадающая
+с результатами, полученными для модели. Таким образом,
+критерий $q_{xz}$ потенциально является лучшим среди рассмотренных.
+
+Для успешной идентификации необходима не только схожесть зависимостей критерия
+от параметра для модели и объекта, но и близость их значений.
+На рис.~\ref{atu:f:colp_q_cml} приведены зависимости $q_{xz}(R_c)$
+как для объекта, так и для модели.
+
 \begin{figure}[htb!]
 \centerline{\includegraphics[width=0.7\textwidth]{p/colp_q_cml.png} }
 \caption{Сравнение зависимостей значений критерия идентификации $q_{xz}$ реального генератора Колпитца с моделью}
 \label{atu:f:colp_q_cml}
 \end{figure}
 
-Предлагаем новые.
+Наблюдается хороший уровень совпадения, что свидетельствует не только
+о правильности выбора критерия, но и о адекватности новой модели в  целом.
+График зависимости для реального объекта имеет меньшую область определения,
+что связано с физическими ограничениями конкретного объекта.
+
+Несмотря на достаточную для работоспособности идентификации
+близость графиков, следует отметить и определённые недостатки
+данного критерия. Прежде всего, наблюдается практически одинаковое расстояние
+между графиками при $R_c > \SI{40}{\ohm}$, то есть в тех областях,
+где наблюдается регулярная динамика.
+На основании имеющихся данных нет возможности определить,
+чем конкретно вызвано это расхождение,
+однако, следует предполагать заметную статическую ошибку идентификации
+в этой области. Также, в пределах рабой области значение критерия
+изменяется слабо. Как следствие, ожидается повышенная чувствительность
+идентификации к помехам при измерении.
+
+
 
 % }}}1
 
