Words about real Colpitts id processes

--- a/p6/colp_real.tex
+++ b/p6/colp_real.tex
@@ -792,7 +792,7 @@ $I_L = \frac{V_{cc}(t) - V_{ca}(t)}{R_{cv1}+R_{cv2}}$.
 На основании имеющихся данных нет возможности определить,
 чем конкретно вызвано это расхождение,
 однако, следует предполагать заметную статическую ошибку идентификации
-в этой области. Также, в пределах рабой области значение критерия
+в этой области. Также, в пределах рабочей области значение критерия
 изменяется слабо. Как следствие, ожидается повышенная чувствительность
 идентификации к помехам при измерении.
 
@@ -802,10 +802,56 @@ $I_L = \frac{V_{cc}(t) - V_{ca}(t)}{R_{cv1}+R_{cv2}}$.
 
 \section{Синтез и анализ системы идентификации}  % {{{1
 
-Описание с картинкой.
+Для проверки работоспособности системы идентификации
+в условиях нестационарного параметра, а также
+для анализа характеристик этой системы,
+необходимо обеспечить контролируемое изменение значения параметра.
+Положение осложняется тем, что требуемые значения изменения сопротивления достаточно малы,
+порядка единиц и десятков Ом, что исключает применение
+цифровых потенциометров. Для реализации возможности изменять значение параметра
+были предприняты следующие шаги.
+К разъёму $\mathrm{P}_3$, была подключена дополнительна схема с независимым питанием,
+состоящая из последовательно включенных переменного резистора
+и MOSFET транзистора логического уровня и с малым сопротивлением
+в открытом состоянии. Значение сопротивления переменного резистора
+в каждом эксперименте подбиралось таки образом, чтобы
+его сопротивление с учётом параллельного включения с резисторами $R_{cv1}$ и $R_{cv2}$
+обеспечивало требуемое значение меньшого сопротивления,
+а только $R_{cv1} + R_{cv2}$ --- большего.
+
+Для управления включением MOSFET транзистора использовалось два подхода.
+В первом транзистором управлял отдельный генератор на таймере 555.
+Этот подход достаточно прост в реализации, однако
+его применение усложняет задачу синхронизации при
+определении ошибки идентификации. Поэтому
+предпочтительным оказался второй подход,
+при котором включением управлял сам контроллер через
+оптическую развязку. Таким образом, переключения
+происходили в заданные моменты времени,
+привязанные к моменту запуска АЦП, что значительно упрощает
+анализ ошибок идентификации. Общий вид установки для
+проведения идентификации приведёт на рис.~\ref{atu:f:colp_r_id_dev}.
+Часть элементов, например SDHC накопитель, находится под
+другими частями установки, и не видна.
+
+
+\begin{figure}[htb!]
+  \centerline{
+    \includegraphics[width=0.80\textwidth]{p/colp_stand.png}
+  }
+  \caption{Общий вид установки для идентификации нестационарного параметра $R_c$ реального генератора Колпитца }
+  \label{atu:f:colp_r_id_dev}
+\end{figure}
+
+Естественным недостатком таких подходов является то, что
+так можно обеспечить только скачкообразную динамику изменения параметра.
+Однако, это не является принципиальным недостатком,
+как как если система идентификации является работоспособной в таких условиях,
+то она сохранит работоспособность и в случае плавного изменения параметра.
 
 Для процессов параметрической идентификации генератора Колпитца представлены результаты четырёх экспериментов,
-проведённых в аналогичных условиях.
+проведённых в схожих условиях.
+Использовалась группа методов идентификации ``ql3rlWvnAAW''.
 
 % C_1, C_2 = 1.0 uF, L = 1.0 mH, R_l=24.2 Ohm, R_e = 300 Ohm, R_1 = R_2 = 2.0 kOhm,
 % Q: MMBT2222A: h_{FE}=210, V_{je} = 0.667V.
@@ -831,10 +877,17 @@ $I_L = \frac{V_{cc}(t) - V_{ca}(t)}{R_{cv1}+R_{cv2}}$.
     \;
     T_{R_c} = \SI{200}{\milli\second};
   \\
-    R_c(t) = \SI{28.5}{\ohm} + \SI{11.5}{\ohm} \cdot \sign \sin \left(  \frac{\pi t}{T_{R_c}}  \right).
+    R_c(t) = \SI{28.5}{\ohm} + \SI{11.5}{\ohm} \cdot \sign \sin \left(  \frac{\pi t}{T_{R_c}}  \right)
   \end{array}
   \label{atu:eq:colp_test1_cond}
 \end{equation}
+%
+были подобраны таки образом, что бы изменение значения параметра
+приводило к переходу от хаотического режима к периодическому.
+
+Как видно из графиков, отображающих процесс идентификации~(рис.~\ref{atu:f:colp_r_id_1}),
+система идентификации оказалась вполне работоспособной.
+
 
 \begin{figure}[htb!]
   \centerline{
@@ -842,9 +895,21 @@ $I_L = \frac{V_{cc}(t) - V_{ca}(t)}{R_{cv1}+R_{cv2}}$.
     \hfill
     \includegraphics[width=0.48\textwidth]{p/r/colp_real_id-p_t_p_ql3rlWvnAAW_real_d_0.png}
   }
-  \caption{Процесс идентификации параметра $R_c$ реального генератора Колпитца при условиях \ref{atu:eq:colp_test1_cond} }
+  \caption{Процесс идентификации параметра $R_c$ реального генератора Колпитца при условиях (\ref{atu:eq:colp_test1_cond})}
   \label{atu:f:colp_r_id_1}
 \end{figure}
+
+При этом следует отметить значительную ошибку идентификации при $R_c = \SI{50}{\ohm}$.
+Её появление следовало ожидать, с учётом уже упомянутой разницы
+в значениях критерия для объекта и модели.
+При этом наблюдается достаточно редкое явление --- одну из
+наименьших ошибок идентификации показал метод координатора поиска
+$p_{gc}$. Это связано с тем, что этот метод характеризуется
+смещением идентифицируемого значения к центру рабочей области
+в случаях, когда идентифицируемое значение находится вблизи края
+этой области. Таким образом, одна ошибка скомпенсировала другую.
+Однако, это достаточно редкий частный случай, и не стоит
+рассматривать полученный результат как преимущество метода $p_{gc}$.
 
 
 Параметры второго эксперимента для генератора Колпитца
@@ -857,10 +922,20 @@ $I_L = \frac{V_{cc}(t) - V_{ca}(t)}{R_{cv1}+R_{cv2}}$.
     \;
     T_{R_c} = \SI{200}{\milli\second};
   \\
-    R_c(t) = \SI{32.25}{\ohm} + \SI{2.75}{\ohm} \cdot \sign \sin \left( \frac{\pi t}{T_{R_c}}  \right).
+    R_c(t) = \SI{32.25}{\ohm} + \SI{2.75}{\ohm} \cdot \sign \sin \left( \frac{\pi t}{T_{R_c}}  \right)
   \end{array}
   \label{atu:eq:colp_test2_cond}
 \end{equation}
+%
+соответствуют переключена динамики системы меду хаотическим
+и сложно периодическим режимами.
+
+Результаты моделирования процессов идентификации,
+представленные на рис.~\ref{atu:f:colp_r_id_2},
+отображают не только сохранение работоспособности,
+но и уменьшение ошибки идентификации из-за работы на том участке критерия,
+на котором различие между объектом и моделью минимально.
+
 
 \begin{figure}[htb!]
   \centerline{
@@ -868,7 +943,7 @@ $I_L = \frac{V_{cc}(t) - V_{ca}(t)}{R_{cv1}+R_{cv2}}$.
     \hfill
     \includegraphics[width=0.48\textwidth]{p/r/colp_real_id-p_t_p_ql3rlWvnAAW_real_d_1.png}
   }
-  \caption{Процесс идентификации параметра $R_c$ реального генератора Колпитца при условиях \ref{atu:eq:colp_test2_cond} }
+  \caption{Процесс идентификации параметра $R_c$ реального генератора Колпитца при условиях (\ref{atu:eq:colp_test2_cond})}
   \label{atu:f:colp_r_id_2}
 \end{figure}
 
@@ -883,10 +958,17 @@ $I_L = \frac{V_{cc}(t) - V_{ca}(t)}{R_{cv1}+R_{cv2}}$.
     \;
     T_{R_c} = \SI{200}{\milli\second};
   \\
-    R_c(t) = \SI{36.0}{\ohm} + \SI{4.0}{\ohm} \cdot \sign \sin \left(   \frac{\pi t}{T_{R_c}}   \right).
+    R_c(t) = \SI{36.0}{\ohm} + \SI{4.0}{\ohm} \cdot \sign \sin \left(   \frac{\pi t}{T_{R_c}}   \right)
   \end{array}
   \label{atu:eq:colp_test3_cond}
 \end{equation}
+%
+соответствуют переходу между двумя сложно-периодическими режимами
+с различным колоченом петлей в аттракторе.
+
+При этом процесс идентификации (рис.~\ref{atu:f:colp_r_id_3}) оказался подвержен
+той же ошибке, которая наблюдалась в первом эксперименте,
+хотя в целом процесс идентификации протекает нормально.
 
 
 \begin{figure}[htb!]
@@ -895,7 +977,7 @@ $I_L = \frac{V_{cc}(t) - V_{ca}(t)}{R_{cv1}+R_{cv2}}$.
     \hfill
     \includegraphics[width=0.48\textwidth]{p/r/colp_real_id-p_t_p_ql3rlWvnAAW_real_d_2.png}
   }
-  \caption{Процесс идентификации параметра $R_c$ реального генератора Колпитца при условиях \ref{atu:eq:colp_test3_cond} }
+  \caption{Процесс идентификации параметра $R_c$ реального генератора Колпитца при условиях (\ref{atu:eq:colp_test3_cond})}
   \label{atu:f:colp_r_id_3}
 \end{figure}
 
@@ -915,6 +997,16 @@ $I_L = \frac{V_{cc}(t) - V_{ca}(t)}{R_{cv1}+R_{cv2}}$.
   \end{array}
   \label{atu:eq:colp_test4_cond}
 \end{equation}
+%
+в какой-то мере аналогичны параметрам из второго эксперимента.
+Происходит переключение из хаотического режима в сложно-периодический,
+но амплитуда изменения параметра несколько больше.
+
+Так как в данном эксперименте
+(рис.~\ref{atu:f:colp_r_id_4})
+не происходит попадание в область,
+где зависимости критерия для модели и объекта заметно отличаются,
+то и ошибка идентификации меньше, чем в первом и третьем эксперименте.
 
 \begin{figure}[htb!]
   \centerline{
@@ -922,9 +1014,16 @@ $I_L = \frac{V_{cc}(t) - V_{ca}(t)}{R_{cv1}+R_{cv2}}$.
     \hfill
     \includegraphics[width=0.48\textwidth]{p/r/colp_real_id-p_t_p_ql3rlWvnAAW_real_d_3.png}
   }
-  \caption{Процесс идентификации параметра $R_c$ реального генератора Колпитца при условиях \ref{atu:eq:colp_test4_cond} }
+  \caption{Процесс идентификации параметра $R_c$ реального генератора Колпитца при условиях (\ref{atu:eq:colp_test4_cond})}
   \label{atu:f:colp_r_id_4}
 \end{figure}
+
+Таким образом, для всех четырёх экспериментов система идентификации
+с использованием группы методов ``ql3rlWvnAAW'' и критерия $q_{xz}$
+показала свою работоспособность. Ошибки идентификации при этом
+в первую очередь обусловлены существующей разницей в динамике
+объекта и моделей, а не недостатками метода.
+
 
 % }}}1
 
