Colpitts param deps description

--- a/p6/colp_real.tex
+++ b/p6/colp_real.tex
@@ -1035,38 +1035,70 @@ $p_{gc}$. Это связано с тем, что этот метод харак
 фильтрующие способности критерия идентификации, должен рассматриваться в первую очередь.
 На рис.~\ref{atu:f:colp_real_id_p_a_q_d_0} представлены полученные зависимости
 для процессов идентификации параметра $R_c$ генератора Колпитца.
+Здесь и дальше приведены результаты, основанные на данных первого эксперимента.
+Другие проведённые эксперименты приводят к аналогичным результатам.
 
 \begin{figure}[htb!]
-  \centerline{\includegraphics[width=0.6\textwidth]{p/r/colp_real_id-p_a_q_d_0.png} }
+  \centerline{\includegraphics[width=0.50\textwidth]{p/r/colp_real_id-p_a_q_d_0.png} }
   \caption{Зависимости $\overline{e}(a_q)$ при идентификации параметра $R_c$ генератора Колпитца при условиях \ref{atu:eq:colp_test1_cond} }
   \label{atu:f:colp_real_id_p_a_q_d_0}
 \end{figure}
 
+Вид этих зависимостей вполне привычный для рассматриваемых систем идентификации,
+и положение минимума ошибки вполне согласуется с наблюдаемыми спектрами системы.
+
+На рис.~\ref{atu:f:colp_real_id_p_q_gamma_d_0} полученные зависимости
+$\overline{e}_{q_\gamma}$
+для процессов идентификации параметра $R_c$ генератора Колпитца.
 
 \begin{figure}[htb!]
-  \centerline{\includegraphics[width=0.6\textwidth]{p/r/colp_real_id-p_q_gamma_d_0.png} }
+  \centerline{\includegraphics[width=0.50\textwidth]{p/r/colp_real_id-p_q_gamma_d_0.png} }
   \caption{Зависимости $\overline{e}(q_\gamma)$ при идентификации параметра $R_c$ генератора Колпитца при условиях \ref{atu:eq:colp_test1_cond} }
   \label{atu:f:colp_real_id_p_q_gamma_d_0}
 \end{figure}
 
+Полученные зависимости имеют довольно странный вид.
+Начальный участок, на котором обычно наблюдается рост ошибки
+идентификации из-за избыточной чувствительности,
+замаскирован существенным уровнем статической ошибки идентификации.
+Дальнейшая слабая зависимость аналогична полученным зависимостям для других систем.
+
+С учётом этих причин зависимость
+$\overline{e}_{v_f}$,
+представленная на рис.~\ref{atu:f:colp_real_id_p_v_f_d_0},
+оказывается вполне ожидаемой. Динамика
+агентов приводит к их смещению
+в точку, в которой совпадают значения критериев модели и объекта,
+что, в данных условиях, приводит к росту ошибки идентификации.
+
 \begin{figure}[htb!]
-  \centerline{\includegraphics[width=0.6\textwidth]{p/r/colp_real_id-p_v_f_d_0.png} }
-  \caption{Зависимости $\overline{e}(v_f)$ при идентификации параметра $R_c$ генератора Колпитца при условиях \ref{atu:eq:colp_test1_cond} }
-  \label{atu:f:colp_real_id_p_v_f_d_0.png}
+  \centerline{\includegraphics[width=0.50\textwidth]{p/r/colp_real_id-p_v_f_d_0.png} }
+  \caption{Зависимости $\overline{e}(v_f)$ при идентификации параметра $R_c$ генератора Колпитца при условиях (\ref{atu:eq:colp_test1_cond})}
+  \label{atu:f:colp_real_id_p_v_f_d_0}
 \end{figure}
 
+Зависимость
+$\overline{e}_{k_e}$,
+представленная на рис.~\ref{atu:f:colp_real_id_p_k_e_d_0},
+совершенно аналогична предыдущей, и по тем же самым причинам.
 
 \begin{figure}[htb!]
-  \centerline{\includegraphics[width=0.6\textwidth]{p/r/colp_real_id-p_k_e_d_0.png} }
-  \caption{Зависимости $\overline{e}(k_e)$ при идентификации параметра $R_c$ генератора Колпитца при условиях \ref{atu:eq:colp_test1_cond} }
-  \label{atu:f:colp_real_id_p_k_e_d_0.png}
+  \centerline{\includegraphics[width=0.50\textwidth]{p/r/colp_real_id-p_k_e_d_0.png} }
+  \caption{Зависимости $\overline{e}(k_e)$ при идентификации параметра $R_c$ генератора Колпитца при условиях (\ref{atu:eq:colp_test1_cond})}
+  \label{atu:f:colp_real_id_p_k_e_d_0}
 \end{figure}
 
+Зависимость
+$\overline{e}_{k_{nl}}$,
+представленная на рис.~\ref{atu:f:colp_real_id_p_k_nl_d_0},
+отображает то, что ограничение индивидуальной динамики
+агентов в пользу динамики ансамбля как целого,
+в данном случае несколько снижает ошибку идентификации.
 
 \begin{figure}[htb!]
-  \centerline{\includegraphics[width=0.6\textwidth]{p/r/colp_real_id-p_k_nl_d_0.png} }
-  \caption{Зависимости $\overline{e}(k_{nl})$ при идентификации параметра $R_c$ генератора Колпитца \ref{atu:eq:colp_test1_cond} }
-  \label{atu:f:colp_real_id_p_k_nl_d_0.png}
+  \centerline{\includegraphics[width=0.50\textwidth]{p/r/colp_real_id-p_k_nl_d_0.png} }
+  \caption{Зависимости $\overline{e}(k_{nl})$ при идентификации параметра $R_c$ генератора Колпитца при условиях (\ref{atu:eq:colp_test1_cond})}
+  \label{atu:f:colp_real_id_p_k_nl_d_0}
 \end{figure}
 %
 %
@@ -1075,6 +1107,12 @@ $p_{gc}$. Это связано с тем, что этот метод харак
 %   \caption{Зависимости $\overline{e}_{r*}(c_n)$ при идентификации параметра $R_c$ генератора Колпитца}
 %   \label{atu:f:colp_real_id_qi_fv5_prm_0-p_k_cn.png}
 % \end{figure}
+
+В целом, наличие статической ошибки идентификации,
+обусловленной не полностью адекватным моделированием,
+нивелирует, в разумных пределах,
+большую часть из рассмотренных зависимостей.
+
 
 % }}}1
 
