Coplitts: bew BJT model + conclusions

--- a/artrefs.bib
+++ b/artrefs.bib
@@ -1368,4 +1368,24 @@
 }
 
 
+@Article{gummel_poon_1970,
+  author = {H. K. Gummel and H. C. Poon},
+  title = "An integral charge control model of bipolar transistors",
+  journal = "Bell Syst. Tech. J.",
+  year = 1970,
+  number = {49},
+  pages = {827--852},
+  language = "english"
+}
+
+@Book{shiskin_electronnie_pribori,
+  title = {Электронные приборы},
+  author = {В. Н. Дулин and Н. А. Аваев  and В. П. Демин  and Ю. Е. Наумов  and А. З. Струков  and Г. Г. Шишкин},
+  location = {М.:},
+  publisher = {Энергоатомиздат},
+  year = {1989},
+  language = {russian},
+  pagetotal = {496}
+}
+
 
