--- a/p6/colp_real.tex
+++ b/p6/colp_real.tex
@@ -537,7 +537,7 @@ $q(b) $, полученные путём моделирования
 Эберса-Молла~\cite{horowitz}:
 %
 \begin{equation}
-  I_c = I_s \left( \exp\frac{V_{be}}U_t{} - 1 \right),
+  I_c = I_s \left( \exp\frac{V_{be}}{U_t} - 1 \right),
   \label{atu:eq:ebers-moll}
 \end{equation}
 %
@@ -550,10 +550,93 @@ $k = \SI{1.38e-23}{\joule/\kelvin}$ -- постоянная Больцмана.
 Необходимо учесть, что в режиме отсечки ($V_b < V_e$) ток коллектора пренебрежимо мал,
 а в режиме насыщения определяется другими элементами схемы.
 
-
 Существуют и более сложные модели, например,
-программы для моделирования электронных схем часто используют так называемую SPICE модель.
+модель Гуммеля-Пуна~\cite{gummel_poon_1970,shiskin_electronnie_pribori}
+часто используют программы для моделирования электронных схем, например ``Spice''
+или же её современны аналоги, такие как ``ngspice''.
+В документации к биполярным транзисторам принято указывать их характеристики
+именно в терминах этой модели.
+В этой модели учитываются как большее количество нелинейных
+эффектов, так и явления, проявляющие семя при высоких частотах.
 
+При разработке физической реализации генератора Колпитца
+его параметры выбирались так, что бы сместить рабочий диапазон частот
+в область единиц и десятков килогерц. В первую очередь это было сделано с целью
+обеспечить работоспособность имеющихся и созданных средств измерения.
+При этом, становится возможным пренебречь высокочастотными явлениями,
+и тем самым, упростить модель.
+
+Далее, современные биполярные транзисторы характеризуются, как правило,
+высоким значением параметра $h_{fe}$.
+С учётом этого факта, а также особенности генератора Колпитца, выраженной
+в поддержании постоянного потенциала базы, можно пренебречь
+как током базы $I_b$, так и отличием тока коллектора $I_c$
+от тока эмиттера $I_e$.
+При этом, основной задачей моделирования транзистора как части генератора Колпитца
+является определение $I_c$, при условии, что заданы
+значения потенциалов $V_e$, $V_c$ и $V_b$.
+Тогда получаем:
+%
+\begin{equation}
+  I_c
+  = I_s \left( \exp\frac{V_{be}}{U_t N_f} - 1 \right)
+    \cdot
+    \left( 1 + \frac{V_{ce}}{V_{af}}\right),
+  \label{atu:eq:bjt_model_sub}
+\end{equation}
+%
+где
+$N_f$ --- коэффициент неидеальности при прямом включении,
+$V_{af} $ --- напряжение Эрли в прямом включении.
+
+После определения $I_c$ можно сделать один шаг
+в численном решении уравнения
+(\ref{atu:eq:colp_phys}).
+При этом, переход к безразмерным величинам
+в этой постановке не даёт заметных преимуществ,
+и не будет применяться.
+
+Как показала практика применения численного решения
+уравнения (\ref{atu:eq:colp_phys}),
+непосредственное применение выражения~(\ref{atu:eq:bjt_model_sub})
+очень легко приводит к вычислительной неустойчивости
+в режиме насыщения и близких к нему.
+Это обусловлено экспоненциальным ростом $I_c$.
+Как правило, в этом случае применяют уменьшение шага по времени.
+Для набора используемых параметров устойчивость рассчёта
+достигалась при шаге по времени порядка $ \SI{1E-9}{\second}$,
+что делает процесс расчёта весьма затратным.
+
+С целью уменьшить вычислительные затраты при моделировании,
+был применён следующий подход. После получения значения $I_c$,
+оно ограничивалось сверху величиной
+$ 5 I_{c,\mathrm{st}}$,
+где
+$ I_{c,\mathrm{st}} = \frac{V_{cc}}{R_{c,{\min}}+R_e}$ --- максимальный ток через систему
+при отсутствии колебаний. Далее, рассчитывалась величина
+%
+\[
+  R_{ce,\mathrm{eff}} = \frac{V_{ce}}{I_c} + R_{ce0},
+\]
+определяющая эффективное сопротивление транзистора с учётом омического
+сопротивления переходов и контактов $R_{ce0}$.
+И результирующее значение тока коллектора определялось так:
+%
+\[
+  I_c = \frac{V_{ce}}{R_{ce,\mathrm{eff}}}.
+\]
+
+Этот подход позволил достичь устойчивости моделирования
+при шаге по времени
+порядка $\SI{5E-7}{\second}$
+без заметного отличия как от прямого моделирования с мелким шагом,
+так и от объекта.
+При дальнейшем моделировании был сделан определённый запас,
+и использовался шаг $\SI{2E-7}{\second}$.
+
+% Напруга Ерлі при прямому і інверсному включенні
+%    double I_c0 = I_s * expm1( V_be / ( V_t * N_f ) )  * ( 1 + V_ce / V_af );
+%    double R_ce = V_ce / I_c0 + R_ce0;
 
 % }}}1
 
@@ -648,7 +731,7 @@ $\SI{15}{\volt}$, в то время как входное напряжение 
 В первой серии экспериментов значение параметра
 $R_c$ было для каждого эксперимента фиксированным,
 и настраивалось перед каждым экспериментом.
-Использовался неравномерный ряд значений параметра в диапазоне $[ 25.3 ; 100]\SI{}{ohm} $.
+Использовался неравномерный ряд значений параметра в диапазоне $[ 25.3 ; 100]\SI{}{\ohm} $.
 В тех областях, где наблюдалось сложное поведение, расстояние между точками было меньшим.
 
 Система регистрации данных работала с использованием четырёх
@@ -1118,6 +1201,49 @@ $\overline{e}_{k_{nl}}$,
 
 
 \section{Выводы по разделу \thechapter}  % {{{1
+
+Результаты натурных
+экспериментов,
+моделирования систем, описывающих динамику генератора Колпитца,
+процессов идентификации параметра $R_c$, определяющего вид этой динамики,
+позволяют сделать следующие выводы:
+
+\begin{itemize}
+
+  \item
+    Применение для описания поведения генератора Колпитца классической модели вида
+    (\ref{atu:eq:colp}) позволяет получить только качественное подобие.
+    Эта модель отображает наличие режимов, наблюдающихся у реальной системы,
+    и переходов между ними. Однако, и форма колебаний,
+    и параметры перехода соблюдаются весьма приблизительно.
+
+  \item
+    Для классической модели возможно построение системы идентификации параметра $b$
+    с использованием ансамбля агентов и критерия $q_{x^2}$.
+
+  \item
+    Использование уточнённой модели генератора Колпитца, с применением
+    описания транзистора вида~(\ref{atu:eq:bjt_model_sub})
+    позволяет более точно описать динамику.
+
+  \item
+    В отличие от классической модели, при идентификации уточнённой
+    имеет смысл применять критерий $q_{xz}$ вместо $q_{x^2}$.
+    При этом наблюдается различие между значениями этого критерия
+    для модели о объекта порядка 5\%.
+
+  \item
+    Метод идентификации параметра $R_c$ реального объекта ансамблевым методом
+    с использованием критерия $q_{xz}$ оказался
+    работоспособным. При этот основной вклад
+    в ошибку идентификации вносит различие между значениями критерия
+    реального объекта и соответствующей ему модели
+
+  \item
+    Наличие заметной статической ошибки идентификации
+    делает настройку параметров системы идентификации менее оправданной.
+
+\end{itemize}
 
 
 В целом синтез критерия идентификации и построение работоспособной системы идентификации для
