Fix Chapter names, pic labes, annot placeholders

--- a/atudiss.tex
+++ b/atudiss.tex
@@ -50,6 +50,10 @@
 
 \input{titul.tex}
 
+\input{atu_annot_ua_full.tex}
+
+\input{atu_annot_en_full.tex}
+
 \clearpage
 \phantomsection
 \pdfbookmark[0]{Contents}{contentsbookmark}
