Fix aref pics paths

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -2044,7 +2044,7 @@ $q_{z^2}(r,b)$.
 \centerline{
   \includegraphics[width=0.45\textwidth]{p5/p/cha/spr_a/sprott_a_q-p_c_x_y.png}
 }
-\caption{Залежності $q_{*}(c_{x_y})$ для системи (\ref{atu:eq:spr_a}) }
+\caption{Залежності $q(c_{x_y})$ для системи (\ref{atu:eq:spr_a}) }
 \label{atu:f:spr_a_q}
 \end{figure}
 
@@ -2305,7 +2305,7 @@ $ q_{dx} $ (рис.~\ref{atu:f:fric_q}).
   \includegraphics[width=0.45\textwidth]{p5/p/cha/fric/fric_m5p-pl_n_sin.png}
 }
 \caption{
-  Процес ідентифікації параметра $ f_{dm} $ системи (\ref{atu:eq:dryfric_sys}) при різних видах нестаціонарності цього параметра
+  Процес ідентифікації параметра $f_{dm}$ системи (\ref{atu:eq:dryfric_sys}) при різних видах нестаціонарності цього параметра
 }
 \label{atu:f:fric_id}
 \end{figure}
@@ -2375,11 +2375,11 @@ BJT транзистора, та різних режимів роботи.
 
 \begin{figure}[htb!]
   \centerline{
-    \includegraphics[width=0.42\textwidth]{p6/p/colp_real_id_qi_fv5-p_p_01.png}
+    \includegraphics[width=0.42\textwidth]{p6/p/r/colp_real_id-p_t_pi_ql3rlWvnAAW_real_d_0.png}
     \hfill
-    \includegraphics[width=0.42\textwidth]{p6/p/colp_real_id_qi_fv5-p_pp_01.png}
+    \includegraphics[width=0.42\textwidth]{p6/p/r/colp_real_id-p_t_p_ql3rlWvnAAW_real_d_0.png}
   }
-  \caption{Процес ідентифікації параметра $ R_c $ реального генератора Колпітца для першого експеріменту}
+  \caption{Процес ідентифікації параметра $R_c$ реального генератора Колпітца для першого експеріменту}
   \label{atu:f:colp_r_id_1}
 \end{figure}
 
